<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Admin_Menu"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_view_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/material_dynamic_primary10"
            android:text="@string/btnViewEvents"
            android:textColor="@color/purple_200"

            app:layout_constraintBottom_toTopOf="@+id/btn_edit_users"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_edit_events"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary10"
            android:text="@string/btnUpdateEvents"
            android:textColor="@color/purple_200"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_edit_users"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_primary10"
            android:text="@string/btnViewUsers"

            android:textColor="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_events" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>